fixed img size in secondary articles

--- a/domestic.html
+++ b/domestic.html
@@ -206,7 +206,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="https://imgs.search.brave.com/z-1ZgkeJOG96CxhjKe5eMrfxv-yGOTxv4gDghasnTt4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9idXJz/dC5zaG9waWZ5Y2Ru/LmNvbS9waG90b3Mv/bGl0dGxlLWJveS1y/ZWFkeS1mb3Itc2No/b29sLXdpdGgtbW9t/LmpwZz93aWR0aD0x/MDAwJmZvcm1hdD1w/anBnJmV4aWY9MCZp/cHRjPTA"
                 alt="Child and parent"
               />
@@ -233,7 +233,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="https://imgs.search.brave.com/ArY9x6wU5lRn239hYecZy3KjSerne7vfWAhV_CAos1c/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMC53/cC5jb20vc3BhY2Vu/ZXdzLmNvbS93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyNC8wNi9G/aXJlZmx5LUFscGhh/LVJvY2tldC1Fc3Jh/bmdlLVJlbmRlcmlu/Zy5qcGc_Zml0PTEy/MDAsNjcyJnF1YWxp/dHk9ODkmc3NsPTE"
                 alt="Esrange testing their new weapon"
               />
@@ -264,7 +264,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="https://imgs.search.brave.com/3v_4Hu0ZxYQPxwYPiYOOd7Kx9Pw2kRHwXVOmDEkA1Ik/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/c3dlZGVudGlwcy5z/ZS93cC1jb250ZW50/L3VwbG9hZHMvMjAy/My8wMy9vcmVzdW5k/X2JyaWRnZV8wNi5q/cGc"
                 alt="A chinese factory worker"
               />
