--- a/economy.html
+++ b/economy.html
@@ -213,7 +213,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="https://imgs.search.brave.com/vzQK5AMHon6HDNojfX-b4YYAYs_pMoBZ1idwb9YvWXo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi80LzQxL1Vu/ZGVyZ3JvdW5kLnN2/Zy8yNTBweC1VbmRl/cmdyb3VuZC5zdmcu/cG5n"
                 alt="London Underground logo"
               />
@@ -243,7 +243,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="/photos/marstravellogo300.png"
                 alt="Mars Travel logo"
               />
@@ -273,7 +273,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="/photos/milking elephant.jpg"
                 alt="A chinese factory worker"
               />
