--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           </div>
           <p>
             <img
-              class="max-w-[50%] max-h-24 float-left px-1"
+              class="max-w-[50%] max-h-[50%] float-left px-1"
               src="/photos/freddy_mercury.webp"
               alt="Freddy Mercury"
             />
@@ -326,7 +326,12 @@
             Taylor. The company responsible for the cloning of the Polly and
             Dolly sheeps in the 90's has cloned the late rock star. Fans are
             thrilled as the band will reunite as soon as the cloned fetus is
-            born, has learnt to walk, talk, sing and grown chest hair.
+            born, has learnt to walk, talk, sing and grown chest hair. <br />
+            Regarding the legal status of the clone, Taylor said
+            <q
+              >We're used to fight for song rights, our ownership of Freddy i
+              undebatalbe.</q
+            >
           </p>
           <i class="author"> by Bob Rock</i>
         </div>
@@ -340,7 +345,7 @@
           </div>
           <p>
             <img
-              class="max-w-[50%] max-h-24 float-left px-1"
+              class="max-w-[50%] max-h-[50%] float-left px-1"
               src="/photos/panana_greenland.png"
               alt=""
             />
@@ -365,9 +370,7 @@
           </div>
           <p>
             <svg
-              class="max-w-[50%] max-h-24 float-left mt-4"
-              width="56"
-              height="35"
+              class="max-w-[50%] max-h-[50%] float-left mt-4"
               viewBox="0 0 56 35"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
