--- a/international.html
+++ b/international.html
@@ -207,7 +207,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="https://imgs.search.brave.com/DiBZUym7J88LReEVq1QYPQw06nNdMjYF-0c3uNpHB5o/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly8xMDAw/bG9nb3MubmV0L3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDE4LzAz/L2xvZ28td2EtNTAw/eDQxNy5wbmc"
                 alt="Freddy Mercury"
               />
@@ -239,7 +239,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="/photos/panana_greenland.png"
                 alt=""
               />
@@ -266,7 +266,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left mt-4"
+                class="max-w-[50%] max-h-[50%] float-left mt-4"
                 src="https://imgs.search.brave.com/uCS-JDudhpy5KlDWqcNJa3hQPnf8tkgTjXNMwu8cTec/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pY2hl/Zi5iYmNpLmNvLnVr/L25ld3MvNDgwL2Nw/c3Byb2RwYi9iOTA4/L2xpdmUvMWEwYzFi/ODAtZjk2Yy0xMWVm/LTllNjEtNzFlZTcx/ZjI2ZWIxLmpwZy53/ZWJw"
                 alt="A chinese factory worker"
               />
