--- a/tech.html
+++ b/tech.html
@@ -215,19 +215,21 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="https://imgs.search.brave.com/DiBZUym7J88LReEVq1QYPQw06nNdMjYF-0c3uNpHB5o/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly8xMDAw/bG9nb3MubmV0L3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDE4LzAz/L2xvZ28td2EtNTAw/eDQxNy5wbmc"
                 alt="WhatsApp logo"
               />
               The US-government has announced a new partnership with Meta for
-              communication services for the CIA. White-House press-secretary,
-              Karoline Leavitt, said american spies will now handle their secret
-              communications through the WhatsApp. Regarding security concerns,
-              especially regarding deep cover agents, Mrs Leavitt added
+              communication services for the CIA. <br />
+              White-House press-secretary, Karoline Leavitt, said american spies
+              will now handle their secret communications through the WhatsApp.
+              Regarding security concerns, especially regarding deep cover
+              agents, Mrs Leavitt added
               <q
                 >What could go wrong? It's not like we're adding the
                 surveillance targets to our group chat!</q
-              >. Meta founder, Mark Zuckeberg, posted on Facebook that a special
+              >. <br />
+              Meta founder, Mark Zuckeberg, posted on Facebook that a special
               emoji would be created for the CIA.
               <q
                 >We're thinking that it would be cool with a smiley having the
@@ -247,11 +249,11 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left px-1"
+                class="max-w-[50%] max-h-[50%] float-left px-1"
                 src="/photos/indian_AI.jpeg"
                 alt=""
               />
-              A new startup is taking the world by storm—Ask Aunty, an
+              A new startup is taking the world by storm—<i>Ask Aunty</i>, an
               AI-powered platform that mimics the wisdom (and occasional
               nosiness) of your typical Indian aunty. Designed to provide advice
               on everything from career choices to love life, Ask Aunty uses a
@@ -283,7 +285,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-24 float-left mt-4"
+                class="max-w-[50%] max-h-[50%] float-left mt-4"
                 src="https://imgs.search.brave.com/nKqpSgYB0fgoCBWCVX79A3pcf4yW_oHKn9lM1YSxd-4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdW5i/cmlkZ2Vzb2xhci5j/b20vd3AtY29udGVu/dC91cGxvYWRzLzIw/MjMvMDEvc29sYXIt/cGFuZWwtd2l0aC1z/dW4tMTAyNHg1NzYu/anBn"
                 alt="A chinese factory worker"
               />
