fixed height of quick articles to fit more text, also adjusted gap in section for better handling

--- a/domestic.html
+++ b/domestic.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ecko Of The Fox - unreal news</title>
+    <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/non-index-style.css" />
@@ -56,7 +57,7 @@
     </header>
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="mt-18 flex flex-col lg:flex-row lg:mt-28">
-      <section class="normal-sidebar">
+      <aside class="normal-sidebar">
         <img class="max-w-20 h-10 pr-4" src="/logos/EoF logo.png" alt="" />
         <div>
           <h1 class="text-center text-xs/5 mb-2">Other news</h1>
@@ -145,7 +146,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <section
@@ -360,11 +361,11 @@
 
         <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <section
-          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.5 lg:justify-around"
+          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.25 lg:justify-around"
         >
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Funäsdalen, March 31, 2025</div>
@@ -378,7 +379,7 @@
           </div>
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Stockholm, April 1, 2025</div>
@@ -394,7 +395,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Gothenburg, April 1, 2025</div>
@@ -403,14 +404,14 @@
               </h2>
             </div>
             <p>
-              Over-Stressed penguins in Slottskogen now have access to stress
+              Stressed penguins in Slottskogen now have access to stress
               management techniques.
             </p>
           </div>
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Malmo, April 1, 2025</div>
@@ -426,7 +427,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Uppsala, April 1, 2025</div>
@@ -442,7 +443,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Kiruna, April 1, 2025</div>
@@ -455,7 +456,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Luleå, April 1, 2025</div>
@@ -468,7 +469,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Östersund, April 1, 2025</div>
@@ -481,7 +482,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Visby, April 1, 2025</div>
@@ -496,7 +497,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Linköping, April 1, 2025</div>
