--- a/economy.html
+++ b/economy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ecko Of The Fox - unreal news</title>
+    <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/non-index-style.css" />
@@ -56,7 +57,7 @@
     </header>
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="mt-18 flex flex-col lg:flex-row lg:mt-28">
-      <section class="normal-sidebar">
+      <aside class="normal-sidebar">
         <img class="max-w-20 h-10 pr-4" src="/logos/EoF logo.png" alt="" />
         <div>
           <h1 class="text-center text-xs/5 mb-2">Other news</h1>
@@ -145,7 +146,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <section
@@ -371,11 +372,11 @@
 
         <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <section
-          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.5 lg:justify-around"
+          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.25 lg:justify-around"
         >
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Brazil, April 1, 2025</div>
@@ -391,7 +392,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>USA, April 1, 2025</div>
@@ -407,7 +408,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Italy, April 1, 2025</div>
@@ -415,15 +416,12 @@
                 <a href="#">Inflation Record High: Pizza Now Costs Your Soul</a>
               </h2>
             </div>
-            <p>
-              The rise forces Italians to rethink their most cherished
-              possessions.
-            </p>
+            <p>Italians forced to rethink their most cherished possessions.</p>
           </div>
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Tokyo, April 1, 2025</div>
@@ -438,7 +436,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>London, April 1, 2025</div>
@@ -454,7 +452,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Tokyo, April 1, 2025</div>
@@ -468,7 +466,7 @@
           </div>
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Paris, April 1, 2025</div>
@@ -483,7 +481,7 @@
           </div>
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Berlin, April 1, 2025</div>
@@ -494,13 +492,14 @@
               </h2>
             </div>
             <p>
-              <q>Why haven't thought of that before?</q>
+              <q>Why haven't we thought of that before?</q> <br />
+              said economists.
             </p>
           </div>
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Hong Kong, April 1, 2025</div>
@@ -510,13 +509,29 @@
             </div>
             <p>Boutiques urge their customers to share their positivity.</p>
           </div>
+
+          <!-- quick title-------------------------------------------- -->
+          <div
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          >
+            <div class="date-and-title">
+              <div>Belgium, April 2, 2025</div>
+              <h2>
+                <a href="#">New Waffle Iron Factory In Bruxelles</a>
+              </h2>
+            </div>
+            <p>
+              Officials tried to stop the project as there already are ten other
+              factories of this kind.
+            </p>
+          </div>
         </section>
       </section>
     </section>
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
       <a
-        class="max-w-20 ml-4 self-center flex flex-col items-center sm:max-w-40"
+        class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
         href="#"
         ><img
           class="mx-auto"
