--- a/entertainment.html
+++ b/entertainment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ecko Of The Fox - unreal news</title>
+    <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/non-index-style.css" />
@@ -56,7 +57,7 @@
     </header>
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="mt-18 flex flex-col lg:flex-row lg:mt-28">
-      <section class="normal-sidebar">
+      <aside class="normal-sidebar">
         <img class="max-w-20 h-10 pr-4" src="/logos/EoF logo.png" alt="" />
         <div>
           <h1 class="text-center text-xs/5 mb-2">Other news</h1>
@@ -145,7 +146,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <section
@@ -400,11 +401,11 @@
 
         <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <section
-          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.5 lg:justify-around"
+          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.25 lg:justify-around"
         >
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>India, April 1, 2025</div>
@@ -417,12 +418,15 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Internet, April 1, 2025</div>
               <h2>
-                <a href="#">ChatGPT's First Book: Binary Thoughts</a>
+                <a href="#"
+                  >ChatGPT's First Book: <br />
+                  <q>Binary Thoughts</q></a
+                >
               </h2>
             </div>
             <p>Critics said it was probably written by DeepSeek.</p>
@@ -430,7 +434,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Finland, April 1, 2025</div>
@@ -446,7 +450,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>South Korea, April 1, 2025</div>
@@ -462,7 +466,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Spain, April 1, 2025</div>
@@ -478,7 +482,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Los Angeles, April 1, 2025</div>
@@ -494,7 +498,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>London, April 1, 2025</div>
@@ -510,7 +514,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Paris, April 1, 2025</div>
@@ -526,7 +530,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Tokyo, April 1, 2025</div>
@@ -542,7 +546,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Tokyo, April 1, 2025</div>
