--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ecko Of The Fox - unreal news</title>
+    <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -54,7 +55,7 @@
       </div>
     </header>
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-    <section class="sidebar">
+    <aside class="sidebar">
       <img class="max-w-20 h-10 pr-4" src="logos/EoF logo.png" alt="" />
       <div>
         <h1 class="text-center">More intresting stories</h1>
@@ -141,7 +142,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </aside>
     <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="flex flex-col px-2 pt-16 mx-0.5 lg:pt-28 sm:border-b">
       <div
