--- a/tech.html
+++ b/tech.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ecko Of The Fox - unreal news</title>
+    <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/non-index-style.css" />
@@ -56,7 +57,7 @@
     </header>
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="mt-18 flex flex-col lg:flex-row lg:mt-28">
-      <section class="normal-sidebar">
+      <aside class="normal-sidebar">
         <img class="max-w-20 h-10 pr-4" src="/logos/EoF logo.png" alt="" />
         <div>
           <h1 class="text-center text-xs/5 mb-2">Other news</h1>
@@ -145,7 +146,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <section
