--- a/international.html
+++ b/international.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ecko Of The Fox - unreal news</title>
+    <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/non-index-style.css" />
@@ -56,7 +57,7 @@
     </header>
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="mt-18 flex flex-col lg:flex-row lg:mt-28">
-      <section class="normal-sidebar">
+      <aside class="normal-sidebar">
         <img class="max-w-20 h-10 pr-4" src="/logos/EoF logo.png" alt="" />
         <div>
           <h1 class="text-center text-xs/5 mb-2">Other news</h1>
@@ -141,7 +142,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <section
@@ -360,11 +361,11 @@
 
         <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <section
-          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.5 lg:justify-around"
+          class="w-full h-fit flex flex-col items-center justify-between px-2 pb-1 text-justify border-t lg:max-w-[1300px] lg:flex-row lg:flex-wrap lg:gap-0.25 lg:justify-around"
         >
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Italy, March 31, 2025</div>
@@ -376,7 +377,7 @@
           </div>
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>USA, March 31, 2025</div>
@@ -391,7 +392,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Japan, March 31, 2025</div>
@@ -407,7 +408,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Australia, March 31, 2025</div>
@@ -423,7 +424,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Brazil, March 31, 2025</div>
@@ -439,7 +440,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Canada, March 31, 2025</div>
@@ -455,7 +456,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Russia, March 31, 2025</div>
@@ -471,7 +472,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>South Korea, March 31, 2025</div>
@@ -487,7 +488,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Italy, March 31, 2025</div>
@@ -503,7 +504,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Germany, March 31, 2025</div>
@@ -521,7 +522,7 @@
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
       <a
-        class="max-w-20 ml-4 self-center flex flex-col items-center sm:max-w-40 "
+        class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
         href="#"
         ><img
           class="mx-auto"
